# FerrusGate

./: .gitignore  Cargo.toml  README.md  index.md  package.json
.github/DISCUSSION_TEMPLATE/: general.yml  ideas.yml  qa.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  question.yml
.github/workflows/: docker-image.yml  rust-release.yml
docs/: .gitignore  package.json
docs/.vitepress/: config.mts
docs/en/: index.md
