[package]
name = "FerrusGate"
version = "0.0.1-alpha"
license = "MIT"
description = "FerrusGate - A unified Single Sign-On (SSO) platform for secure and efficient user authentication across multiple applications."
authors = ["AptS-1547 <apts-1547@esaps.net>"]
edition = "2024"

# 优化配置
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debug]
inherits = "release"
debug = true
strip = false
lto = false

# 二进制配置
[[bin]]
name = "FerrusGate"
path = "src/main.rs"

# 确保有构建脚本
build = "build.rs"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
async-trait = "0.1.88"
colored = "3.0.0"
dashmap = "6.1.0"
dotenv = "0.15.0"
moka = { version = "0.12.10", features = ["future"] }
once_cell = "1.21.3"
r2d2 = "0.8.10"
r2d2_sqlite = "0.29.0"
rusqlite = { version = "0.36.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.45.1"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-attributes = "0.1.29"
tracing-subscriber = "0.3.19"

[dev-dependencies]
tokio-test = "0.4"
actix-rt = "2.9"
tempfile = "3.8"
tokio = { version = "1.45.1", features = ["full"] }
